vlib/v/checker/tests/array_delete_print_err.vv
fn main() {
	mut a := []string{}
	println(a.delete(0))
	println('${a.delete(0)}')
}
